# Clothing-Classifier

./: .gitignore  PRUNE_REPORT.txt  README.md  config.toml  debug_config.py  design document  example_clothing_detection.py  pyproject.toml  requirements.txt  run.ps1  test_advanced_clothing.py  test_clothing.py  test_run_ps1_clothing.py
clothing_vision/: clothing_detector.py  http_server.py
phonebooth_vision/: auto_launch.py  clothing_detector.py  fashionpedia_detector.py  http_server.py  json_server.py  simple_monitor.py
phonebooth_vision.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
phonebooth_vision/config/: manager.py  models.py
