[project]
name = "phonebooth-vision"
version = "0.1.0"
description = "Local privacy-preserving computer vision service for phonebooth."
authors = [
  { name = "Phonebooth Vision Team", email = "dev@example.com" }
]
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "opencv-python>=4.10",
  "ultralytics>=8.2",
  "python-multipart>=0.0.9",
  "tomli>=2.0",
  "typer>=0.9",
  "watchdog>=3.0",
  "httpx>=0.27",
  "transformers>=4.30.0",
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "pillow>=9.0.0",
  "numpy>=1.21.0",
]

[tool.setuptools.packages.find]
include = ["phonebooth_vision*"]

[tool.setuptools.package-data]
"phonebooth_vision.app.server.ui" = ["**/*"]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"
